--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
 	"description": "Track technical debt in your editor",
 	"version": "0.0.1",
 	"engines": {
-		"vscode": "^1.34.0"
+		"vscode": "^1.51.0"
 	},
 	"categories": [
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:takapuna.helloWorld"
+		"onCommand:takapuna.helloWorld",
+		"onCommand:takapuna.askQuestion"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
 				"command": "takapuna.helloWorld",
+				"category": "Takapuna",
 				"title": "Hello World"
+			},
+			{
+				"command": "takapuna.askQuestion",
+				"category": "Takapuna",
+				"title": "Ask a Question"
 			}
 		]
 	},
@@ -25,13 +32,17 @@
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
 		"lint": "eslint . --ext .ts,.tsx",
-		"watch": "tsc -watch -p ./"
+    "webview:dev": "yarn --cwd takapuna-webview dev",
+    "extension:dev": "tsc -watch -p ./",
+		"watch": "concurrently \"yarn webview:dev\" \"yarn extension:dev\""
 	},
 	"devDependencies": {
 		"@types/node": "^16.11.7",
-		"@types/vscode": "^1.34.0",
+		"@types/vscode": "^1.51.0",
+		"@types/vscode-webview": "^1.57.0",
 		"@typescript-eslint/eslint-plugin": "^5.30.0",
 		"@typescript-eslint/parser": "^5.30.0",
+		"concurrently": "^7.2.2",
 		"eslint": "^8.13.0",
 		"typescript": "^4.7.2"
 	}
