Add watch mode for development by default
Signed-off-by: Phillip Rak <rak.phillip@gmail.com>

--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
 		"compile": "tsc -p ./",
 		"lint": "eslint . --ext .ts,.tsx",
     "webview:dev": "yarn --cwd takapuna-webview dev",
+    "webview:watch": "yarn --cwd takapuna-webview build:watch",
     "extension:dev": "tsc -watch -p ./",
-		"watch": "concurrently \"yarn webview:dev\" \"yarn extension:dev\""
+		"watch": "concurrently \"yarn webview:watch\" \"yarn extension:dev\""
 	},
 	"devDependencies": {
 		"@types/node": "^16.11.7",
