--- a/takapuna-webview/package.json
+++ b/takapuna-webview/package.json
@@ -19,9 +19,12 @@
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
     "typescript": "~4.7.4",
     "vite": "^2.9.12",
     "vue-tsc": "^0.38.1"
