Make takapuna a workspace project
Signed-off-by: Phillip Rak <rak.phillip@gmail.com>

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"onCommand:takapuna.openSidebar",
 		"onView:takapuna-sidebar"
 	],
+  "private": true,
+  "workspaces": ["takapuna-webview"],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
