--- a/takapuna-webview/package.json
+++ b/takapuna-webview/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/node": "^16.11.41",
+    "@types/vscode-webview": "^1.57.1",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
