--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
 		"onCommand:takapuna.openSidebar",
 		"onView:takapuna-sidebar"
 	],
-  "private": true,
-  "workspaces": ["takapuna-webview"],
+	"private": true,
+	"workspaces": [
+		"takapuna-webview"
+	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
@@ -80,6 +82,7 @@
 		"watch": "concurrently \"yarn webview:watch\" \"yarn extension:dev\""
 	},
 	"devDependencies": {
+		"@types/lodash.uniqueid": "^4.0.7",
 		"@types/node": "^16.11.7",
 		"@types/vscode": "^1.51.0",
 		"@types/vscode-webview": "^1.57.1",
@@ -88,5 +91,8 @@
 		"concurrently": "^7.2.2",
 		"eslint": "^8.13.0",
 		"typescript": "^4.7.2"
+	},
+	"dependencies": {
+		"lodash.uniqueid": "^4.0.1"
 	}
 }
