--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"onCommand:takapuna.askQuestion",
 		"onCommand:takapuna.refresh",
 		"onCommand:takapuna.openSidebar",
+    "onCommand:takapuna.addPat",
 		"onView:takapuna-sidebar"
 	],
 	"private": true,
@@ -42,7 +43,12 @@
 				"command": "takapuna.openSidebar",
 				"category": "Takapuna",
 				"title": "Create Issue"
-			}
+			},
+      {
+        "command": "takapuna.addPat",
+        "category": "Takapuna",
+        "title": "Add Personal Access Token (PAT)"
+      }
 		],
 		"menus": {
 			"editor/context": [
@@ -93,6 +99,7 @@
 		"typescript": "^4.7.2"
 	},
 	"dependencies": {
+		"@octokit/rest": "^19.0.7",
 		"lodash.uniqueid": "^4.0.1"
 	}
 }
