Add git-url-parse dep
Signed-off-by: Phillip Rak <rak.phillip@gmail.com>

--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
 	},
 	"dependencies": {
 		"@octokit/rest": "^19.0.7",
+		"git-url-parse": "^13.1.0",
 		"lodash.uniqueid": "^4.0.1",
 		"simple-git": "^3.16.0"
 	}
